fix: 'see more button' overlapping card content

--- a/src/components/card-project/CardProject.module.css
+++ b/src/components/card-project/CardProject.module.css
@@ -5,13 +5,15 @@
 }
 
 .cardContent {
-  padding: 10px 10px 50px 10px;
-  position: relative;
+  padding: 10px 10px 40px 10px;
   overflow: hidden;
+  position: relative;
 }
 
-.cardContentCollapsed {
+
+.cardContentCollapsed .wrapper {
   max-height: 200px;
+  overflow: hidden;
 }
 
 .cardFooter {
